<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/browser_browse_view" android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<Button android:text="@string/search" android:id="@+id/search"
		android:layout_height="wrap_content" android:layout_width="fill_parent" />
	<Button android:text="@string/scan" android:id="@+id/scan_code"
		android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_toRightOf="@+id/search" />
	<TextView android:id="@id/android:empty" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:text="@string/no_result" android:layout_below="@+id/search" />
	<ListView android:id="@id/android:list" android:layout_width="fill_parent"
		android:layout_height="fill_parent" 
		android:drawSelectorOnTop="false" android:layout_below="@id/android:empty"/>
</RelativeLayout>
